--- a/date/2025-09/page-2.htm
+++ b/date/2025-09/page-2.htm
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-vpn-github.htm" title="VPN百科 - 9月19日22.9M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月19日22.9M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-14-vpn-proxy.htm" title="VPN百科 - 10月14日18.2M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅节点分享">VPN百科 - 10月14日18.2M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-1-top-vpn.htm" title="VPN百科 - 10月1日22.8M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享">VPN百科 - 10月1日22.8M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-vpn-proxy.htm" title="VPN百科 - 10月6日22.8M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅节点分享">VPN百科 - 10月6日22.8M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-21-vpn-proxy.htm" title="VPN百科 - 10月21日21.1M/S|免费Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅节点分享">VPN百科 - 10月21日21.1M/S|免费Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-free-node-subscribe-links.htm" title="VPN百科 - 10月15日21.8M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享">VPN百科 - 10月15日21.8M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN百科 - 9月10日21.6M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR订阅节点分享">VPN百科 - 9月10日21.6M/S|免费Shadowrocket节点/Clash节点/V2ray节点/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-vpn-node.htm" title="VPN百科 - 9月12日21.2M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅节点分享">VPN百科 - 9月12日21.2M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN百科 - 9月18日20.8M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月18日20.8M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-vpn-github.htm" title="VPN百科 - 10月16日22.7M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享">VPN百科 - 10月16日22.7M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-vpn.htm" title="VPN百科 - 9月30日21.9M/S|免费SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享">VPN百科 - 9月30日21.9M/S|免费SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-16-vpn-node.htm" title="VPN百科 - 9月16日22.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享">VPN百科 - 9月16日22.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-20-vpn-node.htm" title="VPN百科 - 10月20日18.4M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅节点分享">VPN百科 - 10月20日18.4M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-node-share.htm" title="VPN百科 - 9月17日18.6M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月17日18.6M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-share-vpn.htm" title="VPN百科 - 10月17日19.1M/S|免费Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点订阅节点分享">VPN百科 - 10月17日19.1M/S|免费Shadowrocket节点/Clash节点/V2ray节点/Singbox节点/SSR节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-vpn-github.htm" title="VPN百科 - 10月9日20.8M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 10月9日20.8M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-1-top-vpn.htm" title="VPN百科 - 10月1日22.8M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享">VPN百科 - 10月1日22.8M/S|免费Clash节点/V2ray节点/Singbox节点/SSR节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-free-vpn-node.htm" title="VPN百科 - 9月24日19.7M/S|免费Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅节点分享">VPN百科 - 9月24日19.7M/S|免费Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
