--- a/date/2025-10/page-3.htm
+++ b/date/2025-10/page-3.htm
@@ -115,6 +115,81 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-08">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-10-8-vpn-proxy.htm" title="VPN百科 - 10月8日18.2M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/dbb125d5f2056af3c5a995d7c82225ac.webp" alt="VPN百科 - 10月8日18.2M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-8-vpn-proxy.htm" title="VPN百科 - 10月8日18.2M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 10月8日18.2M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了韩国、加拿大、美国、新加坡、欧洲、香港、日本等地区,最高速度可达18.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-07">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-10-7-free-vpn-node.htm" title="VPN百科 - 10月7日21.8M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/7c56d3b638aba64d8bf193713bd438d3.webp" alt="VPN百科 - 10月7日21.8M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-7-free-vpn-node.htm" title="VPN百科 - 10月7日21.8M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 10月7日21.8M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了加拿大、日本、新加坡、欧洲、美国、韩国、香港等地区,最高速度可达21.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-06">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-10-6-vpn-proxy.htm" title="VPN百科 - 10月6日22.8M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="VPN百科 - 10月6日22.8M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-6-vpn-proxy.htm" title="VPN百科 - 10月6日22.8M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 10月6日22.8M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了香港、欧洲、韩国、日本、加拿大、美国、新加坡等地区,最高速度可达22.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-05">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-10-5-share-vpn.htm" title="VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-5-share-vpn.htm" title="VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了香港、欧洲、加拿大、韩国、美国、新加坡、日本等地区,最高速度可达21.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/7c56d3b638aba64d8bf193713bd438d3.webp" alt="VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 10月4日18.6M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了美国、香港、新加坡、欧洲、日本、加拿大、韩国等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-10-03">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -169,16 +244,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-18-vpn-node.htm" title="VPN百科 - 10月18日22M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅节点分享">VPN百科 - 10月18日22M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share-links.htm" title="VPN百科 - 9月22日20.7M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享">VPN百科 - 9月22日20.7M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-21-vpn-proxy.htm" title="VPN百科 - 10月21日21.1M/S|免费Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅节点分享">VPN百科 - 10月21日21.1M/S|免费Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-2-node-share.htm" title="VPN百科 - 10月2日18.4M/S|免费SSR节点/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点订阅节点分享">VPN百科 - 10月2日18.4M/S|免费SSR节点/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-24-free-vpn.htm" title="VPN百科 - 10月24日19.3M/S|免费Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅节点分享">VPN百科 - 10月24日19.3M/S|免费Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-node-subscribe-links.htm" title="VPN百科 - 9月14日22.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享">VPN百科 - 9月14日22.2M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-vpn-github.htm" title="VPN百科 - 10月16日22.7M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享">VPN百科 - 10月16日22.7M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-25-vpn-node.htm" title="VPN百科 - 10月25日21.6M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 10月25日21.6M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-11-vpn-free.htm" title="VPN百科 - 10月11日21.2M/S|免费V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点订阅节点分享">VPN百科 - 10月11日21.2M/S|免费V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN百科 - 9月9日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月9日22.4M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-23-share-vpn.htm" title="VPN百科 - 10月23日21.5M/S|免费Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅节点分享">VPN百科 - 10月23日21.5M/S|免费Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-share-vpn.htm" title="VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享">VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-free-vpn.htm" title="VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket节点/V2ray节点/Clash订阅节点分享">VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket节点/V2ray节点/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-vpn-node.htm" title="VPN百科 - 10月7日21.8M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅节点分享">VPN百科 - 10月7日21.8M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-vpn-github.htm" title="VPN百科 - 9月19日22.9M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享">VPN百科 - 9月19日22.9M/S|免费Shadowrocket节点/Clash节点/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-vpn-node.htm" title="VPN百科 - 9月12日21.2M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅节点分享">VPN百科 - 9月12日21.2M/S|免费SSR/Clash节点/Shadowrocket节点/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-mianfei-vpn.htm" title="VPN百科 - 9月20日20.5M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月20日20.5M/S|免费V2ray节点/Clash节点/SSR/Shadowrocket订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket节点/V2ray节点/SSR/Clash订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -190,7 +265,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
